# toko

./: .gitignore  Cargo.toml  docker-compose.yaml
docker/app/: Dockerfile
src/: domains.rs  lib.rs  main.rs
src/controllers/: get_list.rs
src/domains/: models.rs
src/domains/middlewares/: token_auth.rs
src/domains/models/: controller_inject.rs  error_response.rs
src/domains/models/database/: auth.rs
src/repositories/: auth.rs
