[package]
name = "toko"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
futures-util = "0.3"
log = "0.4.0"
env_logger = "0.8.4"
futures = "0.3"
mongodb = "2.1.0"
serde = { version = "^1.0.101", features = ["derive"] }
serde_json = "1.0"
